@@ -13,3 +13,9 @@ Entry		File
 7		"Serpent Isle" shape
 8		Banner Music
 9		Font
+10		"Setup" shape
+11		"Play Introduction" shape
+12		"Full Screen" shape
+13		"Cheating" shape
+14		"Ok" shape
+15		"Cancel" shape
